# ML-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
cmake/: Boost.cmake  Conan.cmake  Matplot.cmake  OpenMP.cmake  VendorConfig.cmake
examples/: CMakeLists.txt  GaussianNB.cpp  KNearestNeighbours.cpp  LinearRegression.cpp  LogisticRegression.cpp  example_list.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/kernel/: gaussian.hpp
include/metrics/: classification.hpp  regression.hpp
include/model/DecisionTree/: decision_tree.hpp  splitter.hpp
include/model/KAlgorithms/: k_nearest_neighbours.hpp
include/model/LinearRegression/: linear_regression.hpp  optimizer.hpp
include/model/LogisticRegression/: logistic_regression.hpp  optimizer.hpp
include/model/NaiveBayes/: gaussian.hpp
include/utils/: distances.hpp
src/: CMakeLists.txt  main.cpp
test/constexpr/: test_list.cmake
test/runtime/: test_list.cmake
